--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -1,3 +1,50 @@
+@article{kittur2007power,
+    author = {Kittur, Aniket and Chi, Ed and Pendleton, Bryan A. and Suh, Bongwon and Mytkowicz, Todd},
+    citeulike-article-id = {13204651},
+    journal = {World wide web},
+    keywords = {emergence, group\_collaboration},
+    number = {2},
+    pages = {19},
+    posted-at = {2014-05-30 02:11:51},
+    priority = {2},
+    title = {{Power of the few vs. wisdom of the crowd: Wikipedia and the rise of the bourgeoisie}},
+    volume = {1},
+    year = {2007}
+}
+
+@book{surowiecki2005wisdom,
+    author = {Surowiecki, James},
+    citeulike-article-id = {13204649},
+    keywords = {emergence, group\_collaboration},
+    posted-at = {2014-05-30 02:10:19},
+    priority = {2},
+    publisher = {Random House LLC},
+    title = {{The wisdom of crowds}},
+    year = {2005}
+}
+
+@inproceedings{geiger2013,
+    abstract = {{Many quantitative, log-based studies of participation and contribution in CSCW and CMC systems measure the activity of users in terms of output, based on metrics like posts to forums, edits to Wikipedia articles, or commits to code repositories. In this paper, we instead seek to estimate the amount of time users have spent contributing. Through an analysis of Wikipedia log data, we identify a pattern of punctuated bursts in editors' activity that we refer to as edit sessions. Based on these edit sessions, we build a metric that approximates the labor hours of editors in the encyclopedia. Using this metric, we first compare labor-based analyses with output-based analyses, finding that the activity of many editors can appear quite differently based on the kind of metric used. Second, we use edit session data to examine phenomena that cannot be adequately studied with purely output-based metrics, such as the total number of labor hours for the entire project.}},
+    address = {New York, NY, USA},
+    author = {Geiger, R. Stuart and Halfaker, Aaron},
+    booktitle = {Proceedings of the 2013 Conference on Computer Supported Cooperative Work},
+    citeulike-article-id = {13201366},
+    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=2441873},
+    citeulike-linkout-1 = {http://dx.doi.org/10.1145/2441776.2441873},
+    doi = {10.1145/2441776.2441873},
+    isbn = {978-1-4503-1331-5},
+    keywords = {wiki, wikipedia},
+    location = {San Antonio, Texas, USA},
+    pages = {861--870},
+    posted-at = {2014-05-27 08:16:28},
+    priority = {2},
+    publisher = {ACM},
+    series = {CSCW '13},
+    title = {{Using Edit Sessions to Measure Participation in Wikipedia}},
+    url = {http://dx.doi.org/10.1145/2441776.2441873},
+    year = {2013}
+}
+
 @article{newman2001,
     abstract = {{The structure of scientific collaboration networks is investigated. Two scientists are considered connected if they have authored a paper together and explicit networks of such connections are constructed by using data drawn from a number of databases, including MEDLINE (biomedical research), the Los Alamos e-Print Archive (physics), and NCSTRL (computer science). I show that these collaboration networks form  ” small worlds,” in which randomly chosen pairs of scientists are typically separated by only a short path of intermediate acquaintances. I further give results for mean and distribution of numbers of collaborators of authors, demonstrate the presence of clustering in the networks, and highlight a number of apparent differences in the patterns of collaboration between the fields studied.}},
     address = {Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA. mark@santafe.edu},
