--- a/paper/additional.bib
+++ b/paper/additional.bib
@@ -11,3 +11,11 @@
 	url =
 	{https://en.wikipedia.org/wiki/Wikipedia:Editcountitis#Seriously.2C_though...}
 	}
+	
+@article{vonkrogh2014designing,
+	author = {von Krogh, Georg and Maillart, Thomas and Haefliger, Stefan and Sornette, Didier},
+	title = {Designing Organizations for Productive Bursts},
+	journal = {under review},
+	year = {2014}
+}		
+	
