--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,2 +1,2 @@
 \section{Conclusion}
-Endogenous expertise acquisition by editors and quality of Wikipedia articles is a critical problem to overcome in order to understand how people, as individuals, contribute to the achievement of high quality knowledge as public good and how articles greatly benefit from their iterative inputs. For 12 categories of Wikipedia articles, we have identified and calibrated metrics from a {bi-partite network random walker} model. These metrics quantify how editors expertise and articles quality is derived from the variety of inputs made by individuals over time. These metrics give direct insights on how some categories of Wikipedia articles mainly benefit from either a broad set of small inputs by lay-persons, or on the contrary, from a few ``experts" in the field. They also tell whether editors expertise is rather achieved through contributions to a broad set of articles, or by concentrating on a few high level articles. While this method suffers limitations, a similar approach can be extended for better understanding how contributions are valued in open collaboration. Similarly, it could applied to a broad variety of situations, such as social coding (e.g., Github) , or collaborative rating (e.g., Amazon or Yelp reviews), to help understand to origins of quality and reliability, which is often highly recognized and valued in open collaboration.
+We have presented an recursive algorithm based on a {\it bi-partite network random walker} model, which jointly ranks Wikipedia editors by their expertise, and articles by their quality, from a simple input matrix recording whose editor as modified a given article. Moreover, upon calibration on 12 categories of Wikipedia articles, the input and the control parameters of the model inform directly on how value is created from the complex network of contributions. It appears that some categories of Wikipedia articles fully benefit of the multiplicity of contributors (i.e. ``collaborativeness"), while for other categories, more contributors per article generate dis-value. The origins of these differences between categories could stem from limited coordination capacity between contributors. The organization of value creation in open collaboration might also be intrinsically different from one topic to another. Finally, we want to stress the generality of the method we have presented. Similarly to open collaboration in Wikipedia, the proposed algorithm can apply to a variety of  situations, such as social coding (e.g., Github) , or collaborative rating (e.g., Amazon or Yelp reviews), in order to help further understand to origins of collective value creation and quality, which are the hallmark of open collaboration.
