specified iteration convergence 64, and prolificness

--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -7,7 +7,7 @@ This difference might be due to the roughness of the actual metrics for editors 
 
 We have also found $\alpha \approx 0$ for all categories, reflecting the linear influence of the number of articles edited on editors expertise. The interpretation is that an editor is generally as good as the number of articles they have edited. If we substitute ``good" to our actual metric, labor-hours, we should find that labor-hours are directly related to the number of articles edited. So $\alpha \approx 0$ means that articles-touched is a reasonable proxy for labor-hours. This suggests that there are no diminishing return for value creation, in investing hours, or similarly, modifying new articles.
 
-Finally,we find that whether editor ubiquity \textcolor{red}{ [$\rightarrow$ we have not introduced ubiquity for editors beforehand, so it appears hard to use this word here. Is there a chance to use a more intuitive wording ?]}  determines article quality or not, is category dependent. With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category has the least gain from better editors touching more articles. An explanation could because presumably there are a lot of unmediated editors fighting, editors just overwrite each other rather than organize. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and exhibits $\beta = 0$. In fact, it is also only one of two Categories that ever have consecutive snapshots with $\beta < 0$. As a result of better organization, there is probably less edit-warring in this category, and each visit to the page by good editors has a definite, productive task at hand. 
+Finally,we find that whether editor prolificness, determines article quality or not, is category dependent. With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category has the least gain from better editors touching more articles. An explanation could because presumably there are a lot of unmediated editors fighting, editors just overwrite each other rather than organize. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and exhibits $\beta = 0$. In fact, it is also only one of two Categories that ever have consecutive snapshots with $\beta < 0$. As a result of better organization, there is probably less edit-warring in this category, and each visit to the page by good editors has a definite, productive task at hand. 
 
 Overall, it is amazing that so little input information, a binary matrix $M_{ea}$ with only information on whether an editor as modified a given article, is sufficient to achieve a high level of fidelity with actual metrics. It suggests some kind of {\it less is more} mechanism, which has direct implications on the overall cost of evaluating contributions in the complex entanglement of contributions. Namely, the use of the bi-partite network random walker model requires only simple and straightforward data mining, compared with, for instance, a model that would primarily rely on the type of words written by editors.
 
